deployment/2pulsar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsar2
  labels:
    app: pulsar2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulsar2
  template:
    metadata:
      labels:
        app: pulsar2
    spec:
      containers:
        - name: broker
          image: apachepulsar/pulsar:2.10.2
          command:
            - "bin/pulsar"
            - "standalone"
            - "--no-functions-worker"
            - "--no-stream-storage"
            - "--bookkeeper-dir"
            - "/tmp/bookkeeper"
          ports:
            - containerPort: 6650
              name: broker
            - containerPort: 8080
              name: admin
          resources:
            requests:
              memory: "3Gi"
              cpu: "1000m"
            limits:
              memory: "4Gi"
              cpu: "1500m"
          readinessProbe:
            tcpSocket:
              port: 6650
            initialDelaySeconds: 120
            periodSeconds: 60
          livenessProbe:
            tcpSocket:
              port: 6650
            initialDelaySeconds: 180
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: pulsar2
spec:
  type: ClusterIP
  selector:
    app: pulsar2
  ports:
    - name: broker
      port: 6650
      targetPort: broker
    - name: admin
      port: 8080
      targetPort: admin
