deployment/anonimizacion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anonimizacion
  labels:
    app: anonimizacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anonimizacion
  template:
    metadata:
      labels:
        app: anonimizacion
    spec:
      containers:
        - name: anonimizacion
          image: us-central1-docker.pkg.dev/appnomonoliticas-452202/app-no-monoliticas-repo/anonimizacion:1.0
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: gcp-credentials
              mountPath: /app/.keys
              readOnly: true
            - name: gcp-application-credentials
              mountPath: /var/secrets/google
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.1.0
          command:
            - "/cloud-sql-proxy"
            - "appnomonoliticas-452202:us-central1:monoliticas-anonimizacion-db"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: gcp-credentials
          secret:
            secretName: gcp-credentials
        - name: gcp-application-credentials
          secret:
            secretName: gcp-credentials
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
---
kind: Service
apiVersion: v1
metadata:
  name: anonimizacion-service
  annotations:
    cloud.google.com/backend-config: '{"default": "anonimizacion-config"}'
spec:
  type: NodePort
  selector:
    app: anonimizacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
      nodePort: 30001
