deployment/ingesta-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingesta
  labels:
    app: ingesta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingesta
  template:
    metadata:
      labels:
        app: ingesta
    spec:
      containers:
        - name: ingesta
          image: us-central1-docker.pkg.dev/appnomonoliticas-452202/app-no-monoliticas-repo/ingesta:1.0
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: gcp-credentials
              mountPath: /app/.keys
              readOnly: true
            - name: gcp-application-credentials
              mountPath: /var/secrets/google
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.1.0
          command:
            - "/cloud-sql-proxy"
            - "appnomonoliticas-452202:us-central1:monoliticas-ingesta-db"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: gcp-credentials
          secret:
            secretName: gcp-credentials
            items:
            - key: key.json
              path: key.json
        - name: gcp-application-credentials
          secret:
            secretName: gcp-credentials
            items:
            - key: key.json
              path: key.json
        - name: cloudsql-instance-credentials
          secret:
            secretName: gcp-credentials
            items:
            - key: key.json
              path: key.json
---
kind: Service
apiVersion: v1
metadata:
  name: ingesta-service
  annotations:
    cloud.google.com/backend-config: '{"default": "ingesta-config"}'
spec:
  type: NodePort
  selector:
    app: ingesta
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30002
