deployment/mobile-bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-bff
  labels:
    app: mobile-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobile-bff
  template:
    metadata:
      labels:
        app: mobile-bff
    spec:
      containers:
        - name: mobile-bff
          image: us-central1-docker.pkg.dev/appnomonoliticas-452202/app-no-monoliticas-repo/mobile-bff:1.0
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /bff/mobile/v1/ping
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /bff/mobile/v1/ping
              port: 3003
            initialDelaySeconds: 15
            periodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: mobile-bff-service
  annotations:
    cloud.google.com/backend-config: '{"default": "mobile-bff-config"}'
spec:
  type: NodePort
  selector:
    app: mobile-bff
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
      nodePort: 30010
