deployment/public-bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-bff
  labels:
    app: public-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-bff
  template:
    metadata:
      labels:
        app: public-bff
    spec:
      containers:
        - name: public-bff
          image: us-central1-docker.pkg.dev/appnomonoliticas-452202/app-no-monoliticas-repo/public-bff:1.0
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /bff/public/v1/ping
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /bff/public/v1/ping
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: public-bff-service
  annotations:
    cloud.google.com/backend-config: '{"default": "public-bff-config"}'
spec:
  type: NodePort
  selector:
    app: public-bff
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      nodePort: 30011
