deployment/saga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saga
  labels:
    app: saga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saga
  template:
    metadata:
      labels:
        app: saga
    spec:
      containers:
      - name: saga
        image: us-central1-docker.pkg.dev/appnomonoliticas-452202/app-no-monoliticas-repo/saga:3.5
        ports:
        - containerPort: 5003
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
        - name: saga-log-data
          mountPath: /app/data
      volumes:
      - name: saga-log-data
        emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: saga-service
  annotations:
    cloud.google.com/backend-config: '{"default": "saga-config"}'
spec:
  type: NodePort
  selector:
    app: saga
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
      nodePort: 30005
