deployment/verificacion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verificacion
  labels:
    app: verificacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verificacion
  template:
    metadata:
      labels:
        app: verificacion
    spec:
      containers:
        - name: verificacion
          image: us-central1-docker.pkg.dev/appnomonoliticas-452202/app-no-monoliticas-repo/verificacion:2.0
          ports:
            - containerPort: 5002
          volumeMounts:
            - name: gcp-credentials
              mountPath: /app/.keys
              readOnly: true
            - name: gcp-application-credentials
              mountPath: /var/secrets/google
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.1.0
          command:
            - "/cloud-sql-proxy"
            - "appnomonoliticas-452202:us-central1:monoliticas-verificacion-db"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: gcp-credentials
          secret:
            secretName: gcp-credentials
        - name: gcp-application-credentials
          secret:
            secretName: gcp-credentials
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
---
kind: Service
apiVersion: v1
metadata:
  name: verificacion-service
  annotations:
    cloud.google.com/backend-config: '{"default": "verificacion-config"}'
spec:
  type: NodePort
  selector:
    app: verificacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
      nodePort: 30004
